<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/detail_overlay"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:padding="8dp"

    android:background="@drawable/detail_overlay_day">

    <ImageButton
        android:id="@+id/btn_close"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_baseline_close_24_day"
        android:contentDescription="@string/Close_Detail_Overlay"

        android:background="@null"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"

        android:text="@string/Title"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_close" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_genre"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:text="@string/Genre"

        app:layout_constraintTop_toBottomOf="@id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_popularity"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:text="@string/Popularity"

        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_release"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:text="@string/Release"

        app:layout_constraintTop_toBottomOf="@id/tv_popularity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_overview"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:text="@string/Overview"

        app:layout_constraintTop_toBottomOf="@id/tv_release"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_main"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:cropToPadding="true"

        android:contentDescription="@string/Movie_Backdrop"

        app:layout_constraintTop_toBottomOf="@id/tv_overview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>